* use readable class names * fix padding of about in mobile * fix timeline width in mobile

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -16,7 +16,7 @@
 }
 
 .container {
-  width: 60%;
+  width: 70%;
   text-align: center;
   margin-bottom: 30px;
   display: flex;
@@ -36,6 +36,10 @@
 }
 
 @media all and (min-width: 600px) {
+  .container {
+    width: 60%;
+  }
+
   .left {
     float: left;
     width: 70%;
