--- a/src/components/Resume/Resume.scss
+++ b/src/components/Resume/Resume.scss
@@ -1,3 +1,4 @@
 .resume {
   width: auto;
+  padding: 2.2rem 20px;
 }
