--- a/src/components/Resume/ResumeItem/ResumeItem.scss
+++ b/src/components/Resume/ResumeItem/ResumeItem.scss
@@ -3,6 +3,8 @@
 .resume-item-title {
   font-weight: bold;
   //font-size: $subtitle-size;
+  margin-bottom: 0.5em;
+  width: 104%;
 }
 
 .years {
