--- a/src/components/Timeline/TimelineItem/TimelineItem.scss
+++ b/src/components/Timeline/TimelineItem/TimelineItem.scss
@@ -10,6 +10,7 @@
   counter-increment: section;
   position: relative;
   color: $timeline-grey;
+  text-align: left;
 
   //numbers
   &:before {
